--- a/templates/create_poll.html
+++ b/templates/create_poll.html
@@ -30,7 +30,10 @@
                 <input type="text" name="option4" id="option4" />
             </div>
 
-            <input type="submit" />
+            <div class="right-button-container">
+                <input type="submit" />
+            </div>
+
         </form>
     </div>
 {% endblock %}
